--- a/13_Digit_project/src/app.html
+++ b/13_Digit_project/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body style="margin:0;padding:0;">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
